<resources>
    <string name="app_name">Flixster</string>
    <string name="movie_title">Movie Title</string>
    <string name="movie_overview_and_synopsis">Moview overview and synopsis</string>
    <string name="todo">TODO</string>
    <string name="backdrop_image">backdrop image</string>
    <string name="tv_title">Tv Title</string>
    <string name="watch_trailer">Watch Trailer</string>
</resources>
